--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <script src="scripts/services.js"></script>
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/contacts.js"></script>
+    <script src="scripts/controllers/settings.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
