add contact page

--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,7 @@
     <script src="scripts/controllers.js"></script>
     <script src="scripts/controllers/contacts.js"></script>
     <script src="scripts/controllers/settings.js"></script>
+    <script src="scripts/controllers/contact.detail.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
