--- a/app/index.html
+++ b/app/index.html
@@ -55,6 +55,7 @@
     <script src="scripts/controllers/contacts.js"></script>
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/contact.detail.js"></script>
+    <script src="scripts/services/geo.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
