--- a/app/index.html
+++ b/app/index.html
@@ -45,6 +45,7 @@
     <script src="bower_components/ionic/release/js/ionic-angular.js"></script>
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/restangular/dist/restangular.js"></script>
+    <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -56,6 +57,8 @@
     <script src="scripts/controllers/settings.js"></script>
     <script src="scripts/controllers/contact.detail.js"></script>
     <script src="scripts/services/geo.js"></script>
+    <script src="scripts/controllers/signin.js"></script>
+    <script src="scripts/controllers/register.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
