--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
     <script src="scripts/controllers/contact.detail.js"></script>
     <script src="scripts/services/geo.js"></script>
     <script src="scripts/controllers/signin.js"></script>
+    <script src="scripts/services/push.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
