Lots of changes

--- a/app/index.html
+++ b/app/index.html
@@ -46,6 +46,8 @@
     <script src="bower_components/lodash/dist/lodash.compat.js"></script>
     <script src="bower_components/restangular/dist/restangular.js"></script>
     <script src="bower_components/angular-http-auth/src/http-auth-interceptor.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -60,6 +62,9 @@
     <script src="scripts/services/geo.js"></script>
     <script src="scripts/controllers/signin.js"></script>
     <script src="scripts/services/push.js"></script>
+    <script src="scripts/directives/etatimer.js"></script>
+    <script src="scripts/services/contacts.js"></script>
+    <script src="scripts/directives/contact.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
