Add find contacts

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
     <script src="scripts/directives/etatimer.js"></script>
     <script src="scripts/services/contacts.js"></script>
     <script src="scripts/directives/contact.js"></script>
+    <script src="scripts/controllers/contacts.find.js"></script>
+    <script src="scripts/controllers/contacts.findbyname.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
