List contacts from contact book

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
     <script src="scripts/directives/contact.js"></script>
     <script src="scripts/controllers/contacts.find.js"></script>
     <script src="scripts/controllers/contacts.findbyname.js"></script>
+    <script src="scripts/controllers/contacts.findfromcontacts.js"></script>
     <!-- endbuild -->
 
     <!-- cordova script (this will be a 404 during development) -->
